Correctly align footer info

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .footer-info__logo {
